# ce_ia_big_data_5073_programacion_ia_tasca_3_1

./: .gitignore  pyproject.toml
ce_5073_tasca_3_1/: clasificacion.ipynb  client.ipynb  service.py
models/: dt.pck  knn.pck  lr.pck  svm.pck
