[tool.poetry]
name = "ce-5073-tasca-3-1"
version = "0.1.0"
description = ""
authors = ["ncocana <noacoca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
